# mk-rss

./: .gitignore  Cargo.toml  README.md  shell.nix
auto/: deploy
mk_rss/: Cargo.toml
mk_rss/src/: feed.rs  feed_request.rs  fetch.rs  lib.rs  website.rs
mk_rss_cli/: Cargo.toml
mk_rss_cli/src/: main.rs
mk_rss_lambda/: Cargo.toml
mk_rss_lambda/src/: main.rs
nix/: sources.json
src/: error.rs  feed_item.rs  feed_request.rs  fetch.rs  main.rs  rss.rs
terraform/: api_gateway.tf  lambda.tf  main.tf
