[package]
name = "mk-rss"
version = "0.1.0"
authors = ["Jake Woods <jake@jakewoods.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
scraper = "0.12.0"
thiserror = "1.0"
tokio = "0.2.22"
reqwest = { version = "0.10.7"  }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
indoc = "1.0"