[package]
name = "mk_rss_cli"
version = "1.0.0"
authors = [ "Jake Woods <jake@jakewoods.net>" ]
edition = "2018"

[dependencies]
mk_rss = { path = "../mk_rss" }

env_logger = "0.8.2"
scraper = "0.12.0"
clap = "3.0.0-beta.2"
reqwest = "0.11"
tokio = { version = "1.0.1", features = ["full"] }

[[bin]]
name = "mk-rss-cli"
path = "src/main.rs"
