[package]
name = "mk_rss_lambda"
version = "1.0.0"
authors = [ "Jake Woods <jake@jakewoods.net>" ]
edition = "2018"

[dependencies]
mk_rss = { path = "../mk_rss" }

anyhow = "1.0.31"
netlify_lambda_http = "0.2.0"
itertools = "0.10.0"
scraper = "0.12.0"
reqwest = "0.11"
tokio = { version = "1.0.1", features = ["macros"] }

[[bin]]
name = "mk-rss-lambda"
path = "src/main.rs"
